--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -37,4 +37,19 @@
       %a{href:'#'}
         .header__editButton Edit
     .mainView__chatSpace
+      .chatSpace__chat
+        .chat__firstLine
+          %p.chat__userName hoge999
+          %p.chat__sendDate 2019/02/04(Mon) 17:30:43
+        %p.chat__message a
+      .chatSpace__chat
+        .chat__firstLine
+          %p.chat__userName hoge999
+          %p.chat__sendDate 2019/02/04(Mon) 17:30:43
+        %p.chat__message b
+      .chatSpace__chat
+        .chat__firstLine
+          %p.chat__userName hoge999
+          %p.chat__sendDate 2019/02/04(Mon) 17:30:43
+        %p.chat__message c
     .mainView__chatSender
