--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -1,13 +1,3 @@
-$white: #ffffff;
-$ulGray: #eeeeee;
-$slGray: #fafafa;
-$lGray: #999999;
-$blueGray: #434a54;
-$lBlue: #38aef0;
-$dGray: #333333;
-$dBlueGray: #2f3e51;
-$dBlue: #253141;
-
 * {
   box-sizing: border-box;
 }
@@ -41,9 +31,8 @@ a {
 }
 
 .sideBar__userInfo {
-  display: flex;
+  @include evenAllo();
   width: 100%;
-  justify-content: space-between;
   padding: 0 20px;
 }
 
@@ -90,8 +79,7 @@ a {
   background-color: $white;
   height: 100px;
   padding: 0 40px;
-  display: flex;
-  justify-content: space-between;
+  @include evenAllo();
   border-bottom: 1px solid $ulGray;
 }
 
@@ -108,8 +96,7 @@ a {
 .groupInfo__members {
   font-size: 12px;
   color: $lGray;
-  display: flex;
-  justify-content: space-between;
+  @include evenAllo();
   .groupInfo__member {
     margin-right: 5px;
   }
@@ -126,8 +113,10 @@ a {
 }
 
 .mainView__chatSpace {
-  background-color: $slGray;
+  background-color: $hlGray;
   padding: 46px 40px;
+  height: calc(100vh - 190px);
+  overflow: scroll;
 }
 
 .chatSpace__chat {
@@ -156,3 +145,56 @@ a {
   color: $blueGray;
   margin-bottom: 10px;
 }
+
+.mainView__chatSender {
+  background-color: $slGray;
+  padding: 20px 40px;
+}
+
+.chatSender__form {
+  display: flex;
+}
+
+.form__input {
+  width: 100%;
+  position: relative;
+}
+
+.form__inputBox {
+  border: none;
+  padding: 0 40px 0 10px;
+  height: 50px;
+  width: 100%;
+}
+
+.form__label {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.form__fileSelectButton {
+  font-size: 21px;
+}
+
+.form__fileSelectButton:hover {
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.form__file {
+  display: none;
+}
+
+.form__submitButton {
+  color: $white;
+  background-color: $lBlue;
+  width: 100px;
+  height: 50px;
+  border: 1px solid $slGray;
+  border-radius: 2px;
+  padding: 0 30px;
+  margin-left: 15px;
+  cursor: pointer;
+}
+
