--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
-@import './reset';
-@import './messages';
-@import './variable';
+@import 'reset';
+@import 'variable';
+@import 'messages';
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
