--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,55 +1,60 @@
-!!! 5
-%html{lang: 'ja'}
-%meta(charset='UTF-8')
-  %body
-  .infoBar チャットグループが作成されました。
-  .sideBar
-    .sideBar__header
-      .sideBar__userInfo
-        %p.userInfo__userName hoge999
-        %ul.userInfo__menu
-          %li.userInfo__editUserInfo<
-            = link_to root_path, title: 'ユーザー情報を編集します。' do
-              %i.fas.fa-user-edit
-          %li.userInfo__createGroup<
-            = link_to root_path, title: 'チャットグループを新規作成します。' do
-              %i.fas.fa-plus-square
-    .sideBar__groupSelector
-      .groupSelector__groups
-        %a{href:'#'}
-          .groupSelector__group
-            %p.groupSelector__groupName test
-            %p.groupSelector__latestChat f
-        %a{href:'#'}
-          .groupSelector__group
-            %p.groupSelector__groupName test2
-            %p.groupSelector__latestChat まだメッセージがありません
-
-
-  .mainView
-    .mainView__header
-      .header__groupInfo
-        %p.groupInfo__groupName trial
-        %ul.groupInfo__members
-          Member：
-          %li.groupInfo__member< hoge999
-          %li.groupInfo__member< 野生爆弾
+.infoBar チャットグループが作成されました。
+.sideBar
+  .sideBar__header
+    .sideBar__userInfo
+      %p.userInfo__userName hoge999
+      %ul.userInfo__menu
+        %li.userInfo__editUserInfo<
+          = link_to root_path, title: 'ユーザー情報を編集します。' do
+            %i.fas.fa-user-edit
+        %li.userInfo__createGroup<
+          = link_to root_path, title: 'チャットグループを新規作成します。' do
+            %i.fas.fa-plus-square
+  .sideBar__groupSelector
+    .groupSelector__groups
       %a{href:'#'}
-        .header__editButton Edit
-    .mainView__chatSpace
-      .chatSpace__chat
-        .chat__firstLine
-          %p.chat__userName hoge999
-          %p.chat__sendDate 2019/02/04(Mon) 17:30:43
-        %p.chat__message a
-      .chatSpace__chat
-        .chat__firstLine
-          %p.chat__userName hoge999
-          %p.chat__sendDate 2019/02/04(Mon) 17:30:43
-        %p.chat__message b
-      .chatSpace__chat
-        .chat__firstLine
-          %p.chat__userName hoge999
-          %p.chat__sendDate 2019/02/04(Mon) 17:30:43
-        %p.chat__message c
-    .mainView__chatSender
+        .groupSelector__group
+          %p.groupSelector__groupName test
+          %p.groupSelector__latestChat f
+      %a{href:'#'}
+        .groupSelector__group
+          %p.groupSelector__groupName test2
+          %p.groupSelector__latestChat まだメッセージがありません
+
+
+.mainView
+  .mainView__header
+    .header__groupInfo
+      %p.groupInfo__groupName trial
+      %ul.groupInfo__members
+        Member：
+        %li.groupInfo__member< hoge999
+        %li.groupInfo__member< 野生爆弾
+    %a{href:'#'}
+      .header__editButton Edit
+  .mainView__chatSpace
+    .chatSpace__chat
+      .chat__firstLine
+        %p.chat__userName hoge999
+        %p.chat__sendDate 2019/02/04(Mon) 17:30:43
+      %p.chat__message a
+    .chatSpace__chat
+      .chat__firstLine
+        %p.chat__userName hoge999
+        %p.chat__sendDate 2019/02/04(Mon) 17:30:43
+      %p.chat__message b
+    .chatSpace__chat
+      .chat__firstLine
+        %p.chat__userName hoge999
+        %p.chat__sendDate 2019/02/04(Mon) 17:30:43
+      %p.chat__message c
+  .mainView__chatSender
+    %form.chatSender__form
+      .form__input
+        %input.form__input.form__inputBox{placeholder: 'type a message'}
+        %label.form__label
+          %span.form__fileSelectButton
+            %i.fas.fa-images{title: 'アップロードする画像を選択してください。'}
+          %input.form__file{type: 'file'}
+      %input.form__submitButton{type: 'submit', value: 'Send'}
+
