--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -12,16 +12,7 @@
             %i.fas.fa-plus-square
   .sideBar__groupSelector
     .groupSelector__groups
-      %a{href:'#'}
-        .groupSelector__group
-          %p.groupSelector__groupName test
-          %p.groupSelector__latestChat f
-      %a{href:'#'}
-        .groupSelector__group
-          %p.groupSelector__groupName test2
-          %p.groupSelector__latestChat まだメッセージがありません
-
-
+      = render partial: 'grouplist'
 .mainView
   .mainView__header
     .header__groupInfo
@@ -33,21 +24,7 @@
     %a{href:'#'}
       .header__editButton Edit
   .mainView__chatSpace
-    .chatSpace__chat
-      .chat__firstLine
-        %p.chat__userName hoge999
-        %p.chat__sendDate 2019/02/04(Mon) 17:30:43
-      %p.chat__message a
-    .chatSpace__chat
-      .chat__firstLine
-        %p.chat__userName hoge999
-        %p.chat__sendDate 2019/02/04(Mon) 17:30:43
-      %p.chat__message b
-    .chatSpace__chat
-      .chat__firstLine
-        %p.chat__userName hoge999
-        %p.chat__sendDate 2019/02/04(Mon) 17:30:43
-      %p.chat__message c
+    = render partial: 'chat'
   .mainView__chatSender
     %form.chatSender__form
       .form__input
