--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,7 @@
 @import 'reset';
 @import 'variable';
 @import 'messages';
+@import 'user';
+@import 'flash';
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
