Conversion html to haml

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import 'variable';
 @import 'messages';
 @import 'user';
+@import 'group';
 @import 'flash';
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
