--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -37,6 +37,7 @@ a {
   .sideBar__groupSelector {
     background-color: $dBlueGray;
     height: calc(100vh - 100px);
+    overflow: scroll;
     .groupSelector__groups {
       padding: 20px 20px 0;
       .groupSelector__group {
@@ -72,7 +73,7 @@ a {
       .groupInfo__members {
         font-size: 12px;
         color: $lGray;
-        @include evenAllo();
+        display: flex;
         .groupInfo__member {
           margin-right: 5px;
         }
