--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -14,7 +14,7 @@
       = f.text_field :name, placeholder: 'グループ名を入力してください', class: 'chat-group-form__input', id: 'chat_group_name'
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
-      %label.chat-group-form__label{for: 'chat_group_チャットメンバーを追加'} チャットメンバーを追加
+      %label.chat-group-form__label チャットメンバーを追加
     .chat-group-form__field--right
       .chat-group-form__search.clearfix
         %input.chat-group-form__input#user-search-field{ placeholder: '追加したいユーザー名を入力してください' }
@@ -22,7 +22,7 @@
 
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
-      %label.chat-group-form__label{for: "chat_group_member"} チャットメンバー
+      %label.chat-group-form__label チャットメンバー
     .chat-group-form__field--right
       #chat-group-users
   .chat-group-form__field.clearfix
