--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -30,6 +30,7 @@
           %input{ name: 'group[user_ids][]', type: 'hidden', value: current_user.id }
           %P.chat-group-user__name
             = current_user.name
+    - if @users
       - @users.each do |user|
         .chat-group-user.clearfix.js-chat-member#chat-group-user-8
           %input{ name: 'group[user_ids][]', type: 'hidden', value: user.id }
